2018-11-02 [1.42 Bld 138]

- Addition    : new command line swith -maxerrors to allow termination
                of assembly after a given number of errors.
- Addition    : new command line swith -Werror to treat warning as
                errors
- Bugfix      : correct value range of 68K MOVEQ instruction
- Addition    : allow bit-addressable locations to be written in
                internal representation for 80C16x
- Addition    : reworked and extended ColdFire support

2018-09-04 [1.42 Bld 137]

- Change      : Huge internal reworks to allow reporting column of error

2018-08-06 [1.42 Bld 136]

- Addition    : allow nested use of PHASE and DEPHASE
- Addition    : allow some pseudo-ops and aliases for operators/phases for 53C8XX
- Bugfix      : fix assembly of 8086 OUT <imm>,AX/AL
- Bugfix      : fix assembly of 78K4 CALLF/CALLT/RETCS with !-marked argument
- Bugfix      : fix assembly of DSAREL() expressions on 53C8xx
- Bugfix      : fix specification of data register as 68K PMMU function code

2018-06-18 [1.42 Bld 135]

- Bugfix      : some instructions no longer worked on 68008
- Change      : P2HEX and P2BIN by default use auto-ranging

2018-05-06 [1.42 Bld 134]

- Addition    : add support NXP S12Z ("MagniV") family

2018-04-18 [1.42 Bld 133]

- Change      : ALIGN uses execution instead of load address as base
- Addition    : allow ALIGN to optionally fill padding area with
                byte pattern

2018-04-10 [1.42 Bld 132]

- Bugfix      : correct result of strstr() if search string is at end
                of string
- Bugfix      : correct month display on locale systems (off-by-one)
- Bugfix      : Also regard ' and " if enclosed in () or []

2018-03-29 [1.42 Bld 131]

- Bugfix      : correct date display on locale systems

2018-03-28 [1.42 Bld 130]

- Bugfix      : clean up date & time format handling for locale-based systems

2018-03-16 [1.42 Bld 129]

- Bugfix      : correct assumption of length of forward JSR/JMP on 68HC12
