@@ -43,8 +43,8 @@
 #include "stdinc.h"
 #include <string.h>
 
-char *Version = "1.42 Beta [Bld 138]";
-char *DebVersion = "1.42bld138-1";
+char *Version = "1.42 Beta [Bld 139]";
+char *DebVersion = "1.42bld139-1";
 LongInt VerNo = 0x142f;
 
 char *InfoMessCopyright = "(C) 1992,2018 Alfred Arnold";
